header responsive design

--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.1",
     "sass": "^1.86.1"
   },
   "devDependencies": {
