fix next problem to build

--- a/docker/react/Dockerfile
+++ b/docker/react/Dockerfile
@@ -1,6 +1,19 @@
+# Build
+FROM node:23-alpine AS builder
+
+WORKDIR /app
+
+COPY ./front .
+
+RUN npm install && npm run build
+
+# Run
 FROM node:23-alpine
 
 WORKDIR /app
 
-COPY ./front/package.json ./
-RUN npm install
+COPY --from=builder /app ./
+
+EXPOSE 3000
+
+CMD ["npm", "start"]
